Improved release_notes.html

--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -7,7 +7,7 @@
           <div class="release-note">
             <span class="release-date">Jan 24, 2026</span>
             <span class="release-version">v4.1</span>
-            <span class="release-description">Multiple fixes (*.slideshow file openings, restoring files, memory management improvements and more).</span>
+            <span class="release-description">Multiple fixes (opening *.slideshow files, restoring audiofiles, memory management improvements and more).</span>
           </div>
           <div class="release-note">
             <span class="release-date">Dec 31, 2025</span>
