Added GDPR cookies box

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,8 +3,8 @@
   {{ partial "head/head.html" . }}
   <body>
 
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MCHVVQPX"
+    <!-- Google Tag Manager (noscript) — only loads if analytics consent cookie exists -->
+    <noscript><iframe data-cookiecategory="analytics" src="https://www.googletagmanager.com/ns.html?id=GTM-MCHVVQPX"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
