fixed cookie text

--- a/layouts/partials/head/_googleanalytics.html
+++ b/layouts/partials/head/_googleanalytics.html
@@ -41,7 +41,7 @@
         translations: {
           en: {
             consentModal: {
-              description: 'This website uses cookies for analytics purposes. We use our own cookies and some from third parties. Only essential cookies are turned on by default. <a href="/privacy-policy#cookies">Learn more</a>',
+              description: 'We use cookies for analytics. Only essential cookies are enabled by default. <a href="/privacy-policy#cookies">Learn more</a>',
               acceptAllBtn: 'Allow all cookies',
               acceptNecessaryBtn: 'Allow only essential cookies'
             },
