changed cookie banner positioning

--- a/layouts/partials/head/_googleanalytics.html
+++ b/layouts/partials/head/_googleanalytics.html
@@ -25,8 +25,8 @@
     CookieConsent.run({
       guiOptions: {
         consentModal: {
-          layout: 'box',
-          position: 'bottom left'
+          layout: 'bar',
+          position: 'bottom center'
         }
       },
       categories: {
