--- a/layouts/partials/sections/5_releasenotes.html
+++ b/layouts/partials/sections/5_releasenotes.html
@@ -5,6 +5,11 @@
         <h2 class="fs-1 fw-bold text-center text-primary pb-4">Release Notes </h2>
         <div class="release-notes-container">
           <div class="release-note">
+            <span class="release-date">Feb 28, 2026</span>
+            <span class="release-version">v4.2</span>
+            <span class="release-description">Added windowed mode, Live Mode settings, improved NAS drive support, and multiple UI fixes based on user feedback.</span>
+          </div>
+          <div class="release-note">
             <span class="release-date">Jan 24, 2026</span>
             <span class="release-version">v4.1</span>
             <span class="release-description">Multiple fixes (opening *.slideshow files, restoring audiofiles, memory management improvements and more).</span>
